--- a/app/src/main/res/layout/food_card_design.xml
+++ b/app/src/main/res/layout/food_card_design.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -14,24 +15,60 @@
         <androidx.cardview.widget.CardView
             android:id="@+id/recyclerViewRowFood"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_margin="5dp"
-            app:cardCornerRadius="5dp">
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            app:cardCornerRadius="16dp"
+            app:cardElevation="0dp">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
                 <TextView
-                    android:id="@+id/textViewKisiBilgi"
+                    android:id="@+id/textViewBrandNameCard"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text='@{foodObject.yemek_adi+" - "+foodObject.yemek_fiyat}'
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="8dp"
+                    android:text="@string/brand_name"
+                    android:textAppearance="@style/ContentText"
+                    app:layout_constraintBottom_toTopOf="@+id/textViewFoodNameCard"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewFood" />
+
+                <TextView
+                    android:id="@+id/textViewFoodNameCard"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text='@{foodObject.yemek_adi}'
+                    android:textAppearance="@style/ContentText"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:text="Ayran" />
+
+                <TextView
+                    android:id="@+id/textViewFoodPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="8dp"
+                    android:text='@{foodObject.yemek_fiyat + " ₺"}'
+                    android:textAppearance="@style/ContentText"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintHorizontal_bias="0.5"
+                    tools:text="3 ₺" />
+
+                <ImageView
+                    android:id="@+id/imageViewFood"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ayran" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
