--- a/app/src/main/res/layout/fragment_food_details.xml
+++ b/app/src/main/res/layout/fragment_food_details.xml
@@ -6,6 +6,7 @@
     <data>
         <variable name="foodDetailsToolbarTitle" type="String" />
         <variable name="foodDetailsNumber" type="Integer" />
+        <variable name="totalPrice" type="Integer" />
         <variable name="testUserName" type="String" />
         <variable name="foodDetailsFragment" type="com.example.foodorderapp.ui.fragments.FoodDetailsFragment" />
         <variable name="foodObject" type="com.example.foodorderapp.data.entity.Foods" />
@@ -14,74 +15,151 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.fragments.FoodDetailsFragment">
+        tools:context=".ui.fragments.FoodDetailsFragment"
+        android:background="@color/titleBarBackground">
 
-
-        <TextView
-            android:id="@+id/textViewFoodDetailsName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@{foodObject.yemek_adi}"
-            android:textSize="24sp"
+        <include
+            android:id="@+id/includeFoodTitle"
+            layout="@layout/food_details_titlebar"
+            app:foodDetailsFragmentTitle = "@{foodDetailsFragment}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:text="Baklava" />
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/textViewFoodDetailsPrice"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:text="@{Integer.toString(foodObject.yemek_fiyat)}"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewFoodDetailsName"
-            tools:text="5" />
-
-        <Button
-            android:id="@+id/buttonFoodDetailsMinus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="-"
-            android:onClick="@{() -> foodDetailsFragment.btnMinusOnClick()}"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewFoodDetailsNumber"
-            app:layout_constraintEnd_toStartOf="@+id/buttonFoodDetailsPlus"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/textViewFoodDetailsNumber" />
-
-        <Button
-            android:id="@+id/buttonFoodDetailsPlus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="+"
-            android:onClick="@{() -> foodDetailsFragment.btnPlusOnClick()}"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewFoodDetailsNumber"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/buttonFoodDetailsMinus"
-            app:layout_constraintTop_toTopOf="@+id/textViewFoodDetailsNumber" />
-
-        <Button
-            android:id="@+id/buttonFoodDetailsAddToCart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="48dp"
-            android:text="@string/add_to_cart"
-            android:onClick="@{() -> foodDetailsFragment.addToCard(foodObject.yemek_adi, foodObject.yemek_resim_adi, foodObject.yemek_fiyat, foodDetailsNumber, testUserName)}"
+        <com.google.android.material.card.MaterialCardView
+            style="@style/CustomCardViewStyle"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-        <TextView
-            android:id="@+id/textViewFoodDetailsNumber"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="100dp"
-            android:text="@{Integer.toString(foodDetailsNumber)}"
-            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewFoodDetailsPrice" />
+            app:layout_constraintTop_toBottomOf="@+id/includeFoodTitle">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <ImageView
+                    android:id="@+id/imageViewFoodDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:srcCompat="@drawable/ayran" />
+
+                <TextView
+                    android:id="@+id/textViewFoodNameDetails"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="32dp"
+                    android:textAppearance="@style/MainTitle"
+                    android:textSize="24sp"
+                    android:textColor="@color/contentTextColor"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewFoodDetails"
+                    android:text="@string/brand_name" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="4dp"
+                    android:layout_marginTop="32dp"
+                    android:textSize="24sp"
+                    android:textAppearance="@style/MainTitle"
+                    android:textColor="@color/contentTextColor"
+                    app:layout_constraintStart_toEndOf="@+id/textViewFoodNameDetails"
+                    app:layout_constraintTop_toBottomOf="@+id/imageViewFoodDetails"
+                    android:text="@{foodObject.yemek_adi}"
+                    tools:text="Ayran" />
+
+                <TextView
+                    android:id="@+id/textViewFoodDetailsPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:fontFamily="@font/ibm_plex_sans_regular"
+                    android:textSize="18sp"
+                    android:layout_marginTop="8dp"
+                    android:textColor="@color/foodDetailsPriceColor"
+                    android:text='@{Integer.toString(foodObject.yemek_fiyat) + " ₺"}'
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewFoodNameDetails"
+                    tools:text="5 ₺" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/buttonFoodDetailsMinus"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="54dp"
+                    android:layout_marginStart="16dp"
+                    android:background="@drawable/minus_button_background"
+                    android:fontFamily="@font/ibm_plex_sans_medium"
+                    android:onClick="@{() -> foodDetailsFragment.btnMinusOnClick()}"
+                    android:paddingVertical="12dp"
+                    android:text="@string/minus_sign"
+                    android:insetTop="0dp"
+                    android:insetBottom="0dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/contentTextColor"
+                    app:backgroundTint="@null"
+                    app:layout_constraintBottom_toBottomOf="@+id/textViewFoodDetailsNumber"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="@+id/textViewFoodDetailsNumber" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/buttonFoodDetailsPlus"
+                    style="?android:attr/borderlessButtonStyle"
+                    android:layout_width="48dp"
+                    android:layout_height="54dp"
+                    android:background="@drawable/plus_button_background"
+                    android:fontFamily="@font/ibm_plex_sans_regular"
+                    android:onClick="@{() -> foodDetailsFragment.btnPlusOnClick()}"
+                    android:paddingVertical="12dp"
+                    android:text="@string/plus_sign"
+                    android:insetBottom="0dp"
+                    android:insetTop="0dp"
+                    android:textSize="20sp"
+                    android:textColor="@color/contentTextColor"
+                    app:backgroundTint="@null"
+                    app:layout_constraintBottom_toBottomOf="@+id/buttonFoodDetailsAddToCart"
+                    app:layout_constraintStart_toEndOf="@+id/textViewFoodDetailsNumber"
+                    app:layout_constraintTop_toTopOf="@+id/buttonFoodDetailsAddToCart" />
+
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/buttonFoodDetailsAddToCart"
+                    android:layout_width="wrap_content"
+                    android:layout_height="54dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="24dp"
+                    android:onClick="@{() -> foodDetailsFragment.addToCard(foodObject.yemek_adi, foodObject.yemek_resim_adi, foodObject.yemek_fiyat, foodDetailsNumber, testUserName)}"
+                    android:paddingVertical="12dp"
+                    android:text='@{"Add to Cart" + "       " + totalPrice + "₺"}'
+                    tools:text = "Add to Cart           35₺"
+                    android:textAllCaps="false"
+                    android:insetBottom="0dp"
+                    android:insetTop="0dp"
+                    android:textAppearance="@style/ContentText"
+                    app:cornerRadius="16dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
+                <TextView
+                    android:id="@+id/textViewFoodDetailsNumber"
+                    android:layout_width="40dp"
+                    android:layout_height="54dp"
+                    android:background="@drawable/food_details_number_background"
+                    android:fontFamily="@font/ibm_plex_sans_medium"
+                    android:gravity="center"
+                    android:text="@{Integer.toString(foodDetailsNumber)}"
+                    android:textColor="@color/contentTextColor"
+                    app:layout_constraintBottom_toBottomOf="@+id/buttonFoodDetailsPlus"
+                    app:layout_constraintStart_toEndOf="@+id/buttonFoodDetailsMinus"
+                    app:layout_constraintTop_toTopOf="@+id/buttonFoodDetailsPlus"
+                    tools:text="1" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </com.google.android.material.card.MaterialCardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
