Ui design and bug fixes

--- a/app/src/main/res/layout/titlebar.xml
+++ b/app/src/main/res/layout/titlebar.xml
@@ -42,23 +42,24 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
 
-                    <EditText
-                        android:id="@+id/edit_text"
+                    <androidx.appcompat.widget.SearchView
+                        android:id="@+id/searchView"
                         android:layout_width="0dp"
+                        android:theme="@style/SearchViewMy"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="24dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="24dp"
                         android:layout_marginBottom="16dp"
+                        app:queryBackground="@android:color/transparent"
                         android:background="@drawable/edit_text_background"
-                        android:drawableStart="@drawable/ic_search"
-                        android:drawablePadding="16dp"
-                        android:hint="@string/editTextString"
+                        app:searchIcon="@drawable/ic_search"
+                        app:queryHint="@string/editTextString"
                         android:minHeight="48dp"
-                        android:paddingHorizontal="16dp"
-                        android:paddingVertical="8dp"
-                        android:textAppearance="@style/EditText"
-                        android:textColor="@color/editTextTextColor"
+                        app:iconifiedByDefault="false"
+                        android:paddingStart="0dp"
+                        android:paddingEnd="0dp"
+                        android:paddingHorizontal="8dp"
                         android:textColorHint="@color/editTextTextColor"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -109,6 +110,7 @@
                         android:drawableLeft="@drawable/ic_repeat"
                         android:paddingVertical="8dp"
                         android:paddingStart="24dp"
+                        android:onClick="@{() -> mainPageFragmentTitle.repeatLastOnClick(buttonRepeatLastOrder)}"
                         android:paddingTop="8dp"
                         android:text="@string/repeat"
                         android:textAlignment="textStart"
