--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,12 @@
         <!-- Customize your theme here. -->
         <item name="windowNoTitle">true</item>
         <item name="windowActionBar">false</item>
+
+        <item name="android:editTextColor">@color/editTextTextColor</item>
+        <item name="android:textColorHint">@color/editTextTextColor</item>
+        <item name="android:textColorSecondary">@color/editTextTextColor</item>
+        <item name="colorControlActivated">@color/editTextTextColor</item>
+
     </style>
 
     <style name="CustomCardViewStyle" parent="@style/Widget.MaterialComponents.CardView">
@@ -33,6 +39,10 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSizeBottomLeft">16dp</item>
         <item name="cornerSizeTopLeft">16dp</item>
+    </style>
+
+    <style name="SearchViewMy" parent="Widget.AppCompat.Light.SearchView">
+        <item name="android:textSize">14sp</item>
     </style>
 
 </resources>
