--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -60,6 +60,7 @@
                     android:layout_marginBottom="16dp"
                     android:paddingVertical="16dp"
                     android:text="@string/order"
+                    android:onClick="@{() -> cartFragment.buttonOrderOnClick(buttonOrder)}"
                     android:textAllCaps="false"
                     android:textAppearance="@style/ContentText"
                     app:cornerRadius="16dp"
@@ -113,9 +114,6 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
-
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
