--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -35,6 +35,22 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include" />
 
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_account"
+            app:rippleColor="@color/foodDetailsPriceColor"
+            app:tint = "@color/buttonBackgroundColor"
+            android:layout_marginEnd="16dp"
+            app:borderWidth="0dp"
+            android:onClick="@{() -> mainPageFragment.fabOnClick(floatingActionButton)}"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:focusable="true"
+            android:backgroundTint="@color/foodDetailsPriceColor"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
