--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -45,4 +45,10 @@
         <item name="android:textSize">14sp</item>
     </style>
 
+    <style name="Theme.App.Starting" parent="Theme.SplashScreen">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/splash_screen</item>
+        <item name="postSplashScreenTheme">@style/Theme.FoodOrderApp</item>
+        <item name="windowSplashScreenBackground">@color/titleBarBackground</item>
+    </style>
+
 </resources>
