--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -5,6 +5,7 @@
 
     <data>
         <variable name="mainPageToolbarTitle" type="String" />
+        <variable name="cartText" type="String" />
         <variable name="mainPageFragment" type="com.example.foodorderapp.ui.fragments.MainPageFragment" />
         <variable name="foodsAdapter" type="com.example.foodorderapp.ui.adapters.FoodsAdapter" />
     </data>
@@ -21,12 +22,15 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:mainPageFragmentTitle="@{mainPageFragment}" />
+            app:mainPageFragmentTitle="@{mainPageFragment}"
+            app:cartText="@{cartText}"/>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="2"
             android:background="@color/mainBackgroundColor"
             android:adapter="@{foodsAdapter}"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -34,6 +38,7 @@
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/include" />
+
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/floatingActionButton"
@@ -51,6 +56,18 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:focusable="true"
             android:backgroundTint="@color/foodDetailsPriceColor"/>
+
+        <ImageView
+            android:id="@+id/imageViewNoNet"
+            app:srcCompat="@drawable/account"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/include"
+            android:visibility="gone"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
