retry button functionalities are added and re-enabled the check for cart in mainPage

--- a/app/src/main/res/layout/fragment_cart.xml
+++ b/app/src/main/res/layout/fragment_cart.xml
@@ -69,6 +69,7 @@
                 android:visibility="gone"
                 tools:visibility="visible"
                 android:layout_marginTop="16dp"
+                android:onClick="@{() -> cartFragment.retryButtonOnClickCart()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/error_message_cart"/>
