--- a/app/src/main/res/layout/fragment_main_page.xml
+++ b/app/src/main/res/layout/fragment_main_page.xml
@@ -72,6 +72,7 @@
                 android:visibility="gone"
                 tools:visibility="visible"
                 android:layout_marginTop="16dp"
+                android:onClick="@{() -> mainPageFragment.retryOnClick()}"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/error_message"/>
